Game to look into: DiRT, The PATH
=Upcoming=
New Windows Games:
Contributed by Arc Angel:
* Avernum Escape From the Pit
* Binary Domain
* Commandos 2: Men of Courage
* Damnation
* Disciples III: Resurrection
* Dynamite Jack
* Geneforge
* Geneforge 2
* Geneforge 3
* Geneforge 4
* Geneforge 5
* Inversion
* Metal Dead
* Need For Speed: The Run
* Prototype 2
* Sniper Elite V2
* Superpower 2
* The Bard's Tale - Steam only
* The Cursed Crusade - Steam only
* Titan Attacks! - Steam only
* Ys Origin - Steam only
Games From GameSaveManager (so generous!)
* 1... 2... 3... KICK IT! (Drop That Beat Like an Ugly Baby)
* 10 Days under the Sea
* 18 Wheels of Steel: American Long Haul
* 5 Realms of Cards
* 9th Company: Roots of Terror - Steam only
* 3079
* A New Beginning
* Achron
* aeroflyFS
* APOX
* Area 51
* Aces of the GAlaxy
* Act of War: Direct Action
* Act of War: High Treason
* The Adventures of Tintin: The Game
* Agatha Christie: Death on the Nile
* Age of Conan
* Age of Pirates 2: City of Abandoned Ships
* Age of Wonders: Shadow Magic
* Air Conflicts Secret Wars
* Alamandi
* Alone in the Dark (2008)
* Alien Hallway
* Alien Shooter: Revisited
* Alpha Prime
* Analogue: A Hate Story
* Angry Birds
* Angry Birds Rio
* Angry Birds Seasons
* Ankh 2: Heart of Osiris
* Ankh 3: Battle of the Gods
* Anno 2070
* Another World
* Armies of Exigo
* Artificial Academy
* Asterix at the Olympic Games
* AstroPop
* Avenue Flo
* Aveyond II - Ean's Quest
* Aveyond I - Rhen's Quest
* Azada
* Bad Rats: The Rats Revenge
* Ballance
* Balloon Express
* Battle Engine Aquila
* Battlefield 2
* Battlefield 2142
* Battlefield Heroes
* BattleForge
* Battlestations: Midway
* Battlestations: Pacific
* Battlestrike: Force Of Resistance 2
* BC Kings
* Bejeweled 3
* Bejeweled Blitz
* Bejeweled Twist
* Beowulf: The Game
* Betrayal at Krondor
* Betrayal in Antara
* Bionic Commando
* BIONICLE Heroes
* Birth Of America
* Bit.Trip Beat
* Bit.Trip Runner
* Black & White 2
* Blade Kitten